[tool.poetry]
name = "npiai"
version = "0.0.5.dev1"
description = ""
authors = ["wenfeng <w@npi.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.23.2"
npiai-proto = "^v0.0.4.dev1"
termcolor = "^2.4.0"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
