[tool.poetry]
name = "npiai"
version = "0.0.6"
description = ""
authors = ["wenfeng <w@npi.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.23.2"
npiai-proto = {path = "../../proto/python"}
termcolor = "^2.4.0"
loguru = "^0.7.2"
twilio = "^9.0.5"
litellm = "^1.38.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
